cluster/apps/default/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metallb.universe.tf/address-pool: network-services
    metallb.universe.tf/allow-shared-ip: default-lb
  name: default-ingress
spec:
  tls:
  - hosts:
    - "radarr.${SECRET_DOMAIN}"
    - "sonarr.${SECRET_DOMAIN}"
    - "lidarr.${SECRET_DOMAIN}"
    - "prowlarr.${SECRET_DOMAIN}"
    - "transmission.${SECRET_DOMAIN}"
    - "readarr.${SECRET_DOMAIN}"
    secretName: wildcard-cert-tls
  ingressClassName: "nginx"
  rules:
  - host: radarr.${SECRET_DOMAIN}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: radarr 
              port:
                number: 7878
  - host: lidarr.${SECRET_DOMAIN}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: lidarr
              port:
                number: 8686
  - host: sonarr.${SECRET_DOMAIN}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sonarr
              port:
                number: 8989
  - host: readarr.${SECRET_DOMAIN}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: readarr
              port: 
                number: 8787
  - host: prowlarr.${SECRET_DOMAIN}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prowlarr
              port:
                number: 9696
  - host: transmission.${SECRET_DOMAIN}
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: transmission-transmission-openvpn
              port:
                name: http
